--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -23,15 +23,27 @@ h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 32px;
     font-weight: bold;
-    margin-left: 40px;
+    margin-left: 15.5%;
 }
 
-.navbar-nav {
-    float: right;
+a {
+    color: #cccccc;
 }
 
-.navbar-nav li {
-    padding: 20px;
+a.visited {
+    color: grey;
+}
+
+a.hover {
+    color: #4aaaa5;
+}
+
+#navbarNav {
+    padding: 10px;
+    margin-left: 25.5%;
+}
+
+#navbarNav li {
 }
 
 #about-me {
@@ -77,7 +89,21 @@ footer {
     font-size: 10px;
 } 
 
-#footer-text {
+.navbar-text {
     color: white !important;
-    text-align: center !important;
+    text-align: center;
+}
+
+/*
+    These rules will override the Bootstrap navbar styling when the browser's width is 640px or less
+*/
+
+@media screen and (max-width: 640px) {
+    .navbar-brand {
+        min-width: 100%;
+        margin: 0 0 20px 0;
+        text-align: center;
+    }
+
+
 }
