--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -55,6 +55,7 @@ a:hover {
     margin-left: 25.5%;
 }
 
+
 /*Styling for page content*/
 
 #about-me {
@@ -82,6 +83,7 @@ form {
 #contact-form {
     background-color: white;
     margin-top: 20px;
+    margin-bottom: 20px;
     max-width: 960px;
     padding: 20px;
 }
@@ -106,6 +108,7 @@ footer {
     background-color: #666666 !important;
     border-top: 8px solid #4aaaa5;
     font-size: 10px;
+    clear: both;
 } 
 
 .navbar-text {
@@ -125,15 +128,77 @@ footer {
         text-align: center;
     }
 
+    #navbarNav {
+        display: inline;
+        margin-left: 25% !important;
+        list-style: none;
+    }
+
+    #about-me {
+        display: block;
+        margin: 20px auto;
+        max-width: 75%;
+    }
+
+    #contact-form {
+        display: block;
+        margin: 20px auto;
+        max-width: 75%;
+    }
+
+    #portfolio-content {
+        display: block;
+        margin: 20px auto;
+        max-width: 75%;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
-
     
-    footer {
-        position: sticky;
-        margin: 0;
-        clear: both;
-        overflow: hidden;
+    #navbarNav {
+        display: flex;
+        margin-left: 15%;
+        list-style: none;
+
     }
+
+    .navbar-brand {
+        display: inline-block;
+        margin: 0 0 20px 0;
+        text-align: center;
+    }
+
+    #about-me {
+        display: block;
+        margin: 20px auto;
+        max-width: 75%;
+    }
+
+    #contact-form {
+        display: block;
+        margin: 20px auto;
+        max-width: 75%;
+    }
+
+    #portfolio-content {
+        display: block;
+        margin: 20px auto;
+        max-width: 75%;
+    }
+
+}
+
+@media screen and (max-width: 980px ) {
+    .navbar-nav {
+        display: inline-block;
+        float: left;
+    }
+
+    .navbar-brand {
+        display: inline-block;
+        margin: 0 0 20px 0;
+        text-align: center;
+    }
+
 }
